[tool.poetry]
name = "unpack-py101-webscrapping"
version = "0.1.0"
description = ""
authors = ["unpackpy <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
