[tool.poetry]
name = "unpack-py101-webscrapping"
version = "0.1.0"
description = ""
authors = ["unpackpy <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.7.0"
bs4 = "^0.0.1"
requests-html = "^0.10.0"
seaborn = "^0.11.2"
forex-python = "^1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
